weste: Add wsv346.md

--- a/sprint1/wsv346/wsv346.md
+++ b/sprint1/wsv346/wsv346.md
@@ -1,1 +1,39 @@
 # Sprint 1
+
+(include your name, github id, and group name here)
+- Name: Jahneulie Weste
+- Github Id: jweste25
+- Group Name: PickUrPlace
+
+### What you planned to do
+- Add 'Add/Remove' button to nested accordions [#11](https://github.com/utk-cs340-fall24/Pick-Your-Place/issues/11)
+- Add nested accordians to city information offcanvas [#10](https://github.com/utk-cs340-fall24/Pick-Your-Place/issues/10)
+- Create internal "database" of city information [#6](https://github.com/utk-cs340-fall24/Pick-Your-Place/issues/6)
+
+### What you did not do
+- I was able to accomplish all the tasks I planned to.
+
+### What problems you encountered
+- One problem was deciding how to structure the internal database. I had to do some research into modules and objects of objects and arrays of objects to decide. Since our pages are specific to each country, I decided to split the database that way so we only import the necessary information for each page.
+
+### Issues you worked on
+- Add 'Add/Remove' button to nested accordions [#11](https://github.com/utk-cs340-fall24/Pick-Your-Place/issues/11)
+- Add nested accordians to city information offcanvas [#10](https://github.com/utk-cs340-fall24/Pick-Your-Place/issues/10)
+- Create internal "database" of city information [#6](https://github.com/utk-cs340-fall24/Pick-Your-Place/issues/6)
+
+### Files you worked on
+- Pick-Your-Place/src/css/argentina.css
+- Pick-Your-Place/src/css/index.css
+- Pick-Your-Place/src/img/argentina/buenos-aires/BA1.jpeg
+- Pick-Your-Place/src/argentina.html
+- Pick-Your-Place/src/dropdowns.html
+- Pick-Your-Place/src/index.html
+- Pick-Your-Place/src/france.html
+- Pick-Your-Place/src/morocco.html
+- Pick-Your-Place/src/us.html
+
+### What you accomplished
+(Give a description of the features you added or tasks you accomplished. Provide some detail here. This section will be a little longer than the bulleted lists above) 
+- The 'Add/Remove' button allows us to have a two-in-one button for adding and removing a city or the activities of a city from the user's bucket list. We preferred the visual appeal of having one button that shows both instead of multiple buttons that we would have to disable and enable. The button starts as a green Add button, and then once the user clicks it, it turns to Remove, and vice versa.
+- Inside the main accordion in the off-canvas, the nested accordion allows the user to learn more about each attraction, place to eat, and lodging options. We liked the nested accordion style because it allows users to explore as much or as little as they'd like without overwhelming them initially.
+- The internal database allows us to populate the information for the city cards and the city canvases without having to type in the information for each individual thing.
