weste: Add js files

--- a/sprint1/wsv346/wsv346.md
+++ b/sprint1/wsv346/wsv346.md
@@ -31,6 +31,8 @@
 - Pick-Your-Place/src/france.html
 - Pick-Your-Place/src/morocco.html
 - Pick-Your-Place/src/us.html
+- Pick-Your-Place/src/js/argentina.js
+- Pick-Your-Place/src/js/data.js
 
 ### What you accomplished
 (Give a description of the features you added or tasks you accomplished. Provide some detail here. This section will be a little longer than the bulleted lists above) 
