--- a/sprint2/wsv346/wsv346.md
+++ b/sprint2/wsv346/wsv346.md
@@ -17,7 +17,6 @@
 
 ## What problems you encountered
 
-(List the problems you encountered)
 - City card and offcanvas on all pages overall
     - This task should have been broken into multiple tasks. Many previously designed components (i.e city card, offcanvas, etc) were not trasnferred to other pages without issues and they needed to be altered to work properly on all country pages.
     - Styling conflicts caused a lot of issues. Different approaches to styling also made it more difficult to fix. 
@@ -30,8 +29,6 @@
 - Fix carousel [#33](https://github.com/utk-cs340-fall24/Pick-Your-Place/issues/33)
 
 ## Files you worked on
-
-(Give a bulleted list of the files in your github repo that you worked on. Give the full pathname.)
 Non-Images:
 - Pick-Your-Place/src/argentina.html
 - Pick-Your-Place/src/france2.html
@@ -72,4 +69,4 @@ Images:
 
 ## What you accomplished
 
-(Give a description of the features you added or tasks you accomplished. Provide some detail here. This section will be a little longer than the bulleted lists above)
+In this sprint, I was able to combine all of the separate components we designed to include in the offcanvas into one. I was able to fix the shifting functionality for the image carousel and set up all of the image carousels for each of the cities. I was also able to create all of the cards for the cities we identified in our country database. I was able to set the foundation of each country page for the other functionalities to be added to the cards and the image carousels. I was also able to add the functionality to the bucket list icons that was missed when transfering the navbar and fixing all styling issues related to that.
