Adding sprint3 information

--- a/sprint3/wsv346/wsv346.md
+++ b/sprint3/wsv346/wsv346.md
@@ -1,1 +1,55 @@
-insert info here
+# Sprint 3
+
+- Name: Jahneulie Weste
+- Github Id: jweste25
+- Group Name: PickUrPlace
+
+## What you planned to do
+- Insert Argentina accordion information [#50](https://github.com/utk-cs340-fall24/Pick-Your-Place/issues/50)
+- Make bucket list items persist to other pages [#62](https://github.com/utk-cs340-fall24/Pick-Your-Place/issues/62)
+- Make the bucket list of array of objects [#64](https://github.com/utk-cs340-fall24/Pick-Your-Place/issues/64)
+- Fix us.html populating information + checkbox functionality [#59](https://github.com/utk-cs340-fall24/Pick-Your-Place/issues/59)
+
+## What you did not do
+- I completed all of my assigned tasks.
+
+## What problems you encountered
+I originally tried to fix the us.html problems first, but due to the amount of code that we had it was hard to pinpoint where things were going wrong. While creating the bucket list array of objects and trying to get the list to persist on other pages, I had to do a large refector of the process we previously had for adding cities to the bucket list. Figuring out that functionality took longer than I expected it to, but due to decreasing the amount of unnecessary code I was able to pinpoint where the original us.html problems were happening. It ended up being a very small problem that I never would have found without the refactor.
+
+## Issues you worked on
+- Insert Argentina accordion information [#50](https://github.com/utk-cs340-fall24/Pick-Your-Place/issues/50)
+- Make bucket list items persist to other pages [#62](https://github.com/utk-cs340-fall24/Pick-Your-Place/issues/62)
+- Make the bucket list of array of objects [#64](https://github.com/utk-cs340-fall24/Pick-Your-Place/issues/64)
+- Fix us.html populating information + checkbox functionality [#59](https://github.com/utk-cs340-fall24/Pick-Your-Place/issues/59)
+
+## Files you worked on
+Non-Images
+- Pick-Your-Place/src/js/data.js
+- Pick-Your-Place/src/js/argentina.js
+- Pick-Your-Place/src/js/france.js
+- Pick-Your-Place/src/js/japan.js
+- Pick-Your-Place/src/js/morocco.js
+- Pick-Your-Place/src/js/us.js
+- Pick-Your-Place/src/js/bucket_list.js
+- Pick-Your-Place/src/argentina.html
+- Pick-Your-Place/src/france2.html
+- Pick-Your-Place/src/japan.html
+- Pick-Your-Place/src/morocco.html
+- Pick-Your-Place/src/us.html
+
+Images
+- Pick-Your-Place/src/img/argentina/buenos-aires/lodging1.png
+- Pick-Your-Place/src/img/argentina/buenos-aires/lodging2.png
+- Pick-Your-Place/src/img/argentina/buenos-aires/pTe1.png
+- Pick-Your-Place/src/img/argentina/buenos-aires/pTe2.png
+- Pick-Your-Place/src/img/argentina/buenos-aires/spot1.png
+- Pick-Your-Place/src/img/argentina/buenos-aires/spot2.png
+- Pick-Your-Place/src/img/argentina/mendoza/lodging1.png
+- Pick-Your-Place/src/img/argentina/mendoza/lodging2.png
+- Pick-Your-Place/src/img/argentina/mendoza/pTe1.png
+- Pick-Your-Place/src/img/argentina/mendoza/pTe2.png
+- Pick-Your-Place/src/img/argentina/mendoza/spot1.png
+- Pick-Your-Place/src/img/argentina/mendoza/spot2.png
+
+## What you accomplished
+I was able to delete around 500 lines of unnecessary code and refactor that code into a few functions that could be called on each country's js file. I was also able to fix some of the bugs that we weren't able to pinpoint due to them being lost in the sheer amount of code. I was able to create a bucket list that persists across all the pages and it creates an array of objects that can be used by the Ajax server and sent to the user in an email. I was also able to research the information for Argentina so that a user could actually determine if they would like to visit those cities.
